# autoencoder

./: Dockerfile  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: docker-publish-cpu.yml  docker-publish-gpu.yml
notebooks/demo/: anomaly_detection.ipynb  mnist_dataset.ipynb  tf_flowers.ipynb
notebooks/tuning/: minndae.ipynb
src/autoencoder/: __main__.py  training.py
src/autoencoder/data/: __init__.py  anomaly.py  evaluate.py  utils.py  visualize.py
src/autoencoder/model/: __init__.py  base.py  convolutional.py  deep.py  dummy.py  minimal.py
src/autoencoder/model/minimal/: __init__.py  van2d.py  vanilla.py
tests/: __init__.py  test_main.py
