[tool.poetry]
name = "autoencoder"
version = "0.0.0"
description = "Python library implementing various autoencoders."
authors = ["Diogenes Analytics <diogenesanalytics@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DiogenesAnalytics/autoencoder"
repository = "https://github.com/DiogenesAnalytics/autoencoder"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/DiogenesAnalytics/autoencoder/releases"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = ">=8.0.1"
keras = "~2.14"
tensorflow = "~2.14"
nvidia-cublas-cu11 = { version = "11.11.3.6", optional=true }
nvidia-cuda-cupti-cu11 = { version = "11.8.87", optional=true }
nvidia-cuda-nvcc-cu11  = { version = "11.8.89", optional=true }
nvidia-cuda-runtime-cu11 = { version = "11.8.89", optional=true }
nvidia-cudnn-cu11 = { version = "8.7.0.84", optional=true }
nvidia-cufft-cu11 = { version = "10.9.0.58", optional=true }
nvidia-curand-cu11 = { version = "10.3.0.86", optional = true }
nvidia-cusolver-cu11 = { version = "11.4.1.48", optional = true }
nvidia-cusparse-cu11 = { version = "11.7.5.86", optional = true }
nvidia-nccl-cu11 = { version = "2.16.5", optional = true }
tensorrt = { version = "8.5.3.1", optional = true }

[tool.poetry.extras]
gpu-min = [
  "nvidia-cudnn-cu11",
]
gpu-max = [
  "nvidia-cublas-cu11",
  "nvidia-cuda-cupti-cu11",
  "nvidia-cuda-nvcc-cu11",
  "nvidia-cuda-runtime-cu11",
  "nvidia-cudnn-cu11",
  "nvidia-cufft-cu11",
  "nvidia-curand-cu11",
  "nvidia-cusolver-cu11",
  "nvidia-cusparse-cu11",
  "nvidia-nccl-cu11",
  "tensorrt",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
nox = ">=2023.4.22"
nox-poetry = ">=1.0.3"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
autoencoder = "autoencoder.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["autoencoder", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["tensorflow.*", "keras.*", "matplotlib.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
